crates/storage-macros/tests/compile_fail/collection.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/collection.rs:35:30
   |
35 |         let _: Vec<Parent> = Interface::children_of(parent.id(), &parent.group).unwrap();
   |                -----------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<Parent>`, found `Vec<Child>`
   |                |
   |                expected due to this
   |
   = note: expected struct `Vec<Parent>`
              found struct `Vec<Child>`
